add sort and loading

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,7 +6,6 @@
 
 body {
   background-color: $background;
-  
 }
 
 .wrapper {
@@ -28,7 +27,7 @@ body {
   &__items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   &__top {
