--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -5,12 +5,14 @@
   &__label {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    padding-left: 5px;
 
     svg {
       margin-right: 8px;
 
       &.rotated {
-        transform:rotate(180deg);
+        transform: rotate(180deg);
       }
     }
 
